<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/distance"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_kilometers" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price_per_liter" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/autonomy"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/km_per_liter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/total_expense"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/r_0"
        android:textColor="@color/Azul_botão"
        android:textSize="42sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/verde_botão"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textSize="20sp" />


</LinearLayout>